@@ -3,7 +3,8 @@ Changes from Ant 1.1 to the current sources
 Changes that could break older environments:
 --------------------------------------------
 
-* copying of support files in <javac> has been removed.
+* copying of support files in <javac> has been removed - as well as
+the filtering attribute.
 
 * the command line switches _not_ starting with - have been removed.
 
